specification/specs/x_pack/security/user/invalidate_user_access_token/InvalidateUserAccessTokenResponse.ts
class InvalidateUserAccessTokenResponse extends ResponseBase {
	created: boolean;
}
